sauvegarde de mes test de scrap et du scraper d adrien

--- a/Ressources/Gamekult/Untitled.ipynb
+++ b/Ressources/Gamekult/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,83 +45,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<div class=\"pr__game-h__mdb__details\">\n",
-      "<span class=\"pr__game-h__mdb__details__title gk__helpers__fat-title-m\">\n",
-      "<a href=\"/jeux/leisure-suit-larry-wet-dreams-don-t-dry-3050879401.html\">Leisure Suit Larry : Wet Dreams Don't Dry</a>\n",
-      "</span>\n",
-      "<span class=\"pr__game-h__mdb__details__category\">\n",
-      "                            Aventure-Point &amp; click                    </span>\n",
-      "<span class=\"pr__game-h__mdb__details__company\">\n",
-      "                            par\n",
-      "                                                            Assemble Entertainment                                                        </span>\n",
-      "<span class=\"pr__game-h__mdb__details__company\">\n",
-      "                            Développé par\n",
-      "                                                            CrazyBunch                                                                    </span>\n",
-      "<div class=\"pr__game-h__mdb__details__tag\">\n",
-      "<span class=\"pr__platform__tag--link\">\n",
-      "<a href=\"/plateforme/pc-160001.html\" title=\"PC\">\n",
-      "        PC\n",
-      "    </a>\n",
-      "</span> <span class=\"pr__platform__tag--link\">\n",
-      "<a href=\"/plateforme/ps4-160101.html\" title=\"PS4\">\n",
-      "        PS4\n",
-      "    </a>\n",
-      "</span> <span class=\"pr__platform__tag--link\">\n",
-      "<a href=\"/plateforme/switch-160106.html\" title=\"Switch\">\n",
-      "        Switch\n",
-      "    </a>\n",
-      "</span> <span class=\"pr__platform__tag--link\">\n",
-      "<a href=\"/plateforme/xone-160102.html\" title=\"XONE\">\n",
-      "        XONE\n",
-      "    </a>\n",
-      "</span> </div>\n",
-      "</div>\n",
-      "<span class=\"pr__game-h__mdb__details__company\">\n",
-      "                            par\n",
-      "                                                            Assemble Entertainment                                                        </span>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_game = soup.find_all(\"div\", class_=\"pr__game-h__mdb__details\")\n",
     "dates_prices_plat = soup.find_all(\"div\" ,class_=\"pr__game-h__mdb__offers\")\n",
     "\n",
-    "print(all_game[0])\n",
     "\n",
     "titles = soup.find_all('span', attrs={'class': \"pr__game-h__mdb__details__title gk__helpers__fat-title-m\"})\n",
     "\n",
     "#A tester\n",
     "category = soup.find_all('span', attrs={'class':'pr__game-h__mdb__details__category'})\n",
     "platform = soup.find_all('span', attrs={'class': \"pr__platform__tag--link\"})\n",
-    "company = soup.find_all('span', attrs={'class':\"pr__game-h__mdb__details__company\"})\n",
-    "\n"
+    "company = soup.find_all('span', attrs={'class':\"pr__game-h__mdb__details__company\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"Leisure Suit Larry : Wet Dreams Don't Dry\", 'Vaporum : Lockdown', 'eFootball PES 2021', 'BPM : Bullets Per Minute', 'Fight Crab', 'Spelunky 2', 'Inertial Drift', 'RPG Maker MV', 'The Unfinished Swan', 'Ostranauts', 'Tamarin', 'Hotshot Racing', 'Vampire : The Masquerade - Shadows of New York', 'Company of Heroes', 'Control Ultimate Edition', 'Bounty Battle', 'Minoria', 'Wintermoor Tactics Club', 'Othercide', \"Bake 'n Switch\", 'Spark the Electric Jester 2', 'AeternoBlade', 'Kingdoms of Amalur : Re-Reckoning', 'Necromunda : Underhive Wars', 'AVICII Invector']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "all_title =[]\n",
     "while i < len(all_game) :\n",
-    "    games = title[i].text\n",
+    "    games = titles[i].text\n",
     "    games = games.strip()\n",
     "    games = games.replace('\\n',' ')\n",
     "    for a in games:\n",
@@ -132,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "90"
+       "81"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,10 +103,38 @@
     "    plat = plat.strip()\n",
     "    plat = plat.replace('\\n',' ')\n",
     "    for a in plat:\n",
-    "        games = games.replace('  ',' ')\n",
-    "    all_platform.append(games)\n",
+    "        plat = plat.replace('  ',' ')\n",
+    "    all_platform.append(plat)\n",
     "    i +=1\n",
     "len(all_platform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "all_games = []\n",
+    "while i < len(all_game) :\n",
+    "    games = all_game[i].text\n",
+    "    games = games.strip()\n",
+    "    games = games.replace('\\n', ' ')\n",
+    "    all_games.append(games)\n",
+    "    i+=1\n",
+    "len(all_games)"
    ]
   },
   {
